test/scc/type/semantic-errors/008.t
struct _Aligned(0) A
{
	int a;
};